RESOLVED FIXED151798
[css-grid] Fix height computation of grid items with borders inside fr tracks
https://bugs.webkit.org/show_bug.cgi?id=151798
Summary [css-grid] Fix height computation of grid items with borders inside fr tracks
Sergio Villar Senin
Reported 2015-12-03 00:30:12 PST
[css-grid] Fix height computation of grid items with borders inside fr tracks
Attachments
Patch (5.27 KB, patch)
2015-12-03 01:08 PST, Sergio Villar Senin
no flags
Patch (5.41 KB, patch)
2015-12-03 02:00 PST, Sergio Villar Senin
zalan: review+
Sergio Villar Senin
Comment 1 2015-12-03 01:08:46 PST
Sergio Villar Senin
Comment 2 2015-12-03 02:00:45 PST
Sergio Villar Senin
Comment 3 2015-12-04 03:15:12 PST
Note You need to log in before you can comment on or make changes to this bug.